; ModuleID = '/home/carl/AnghaBench/postgres/src/bin/scripts/extr_common.c_executeMaintenanceCommand.c'
source_filename = "/home/carl/AnghaBench/postgres/src/bin/scripts/extr_common.c_executeMaintenanceCommand.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [4 x i8] c"%s\0A\00", align 1
@PGRES_COMMAND_OK = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @executeMaintenanceCommand(i32* %0, i8* %1, i32 %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  %8 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store i8* %1, i8** %5, align 8
  store i32 %2, i32* %6, align 4
  %9 = load i32, i32* %6, align 4
  %10 = icmp ne i32 %9, 0
  br i1 %10, label %11, label %14

11:                                               ; preds = %3
  %12 = load i8*, i8** %5, align 8
  %13 = call i32 @printf(i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str, i64 0, i64 0), i8* %12)
  br label %14

14:                                               ; preds = %11, %3
  %15 = load i32*, i32** %4, align 8
  %16 = call i32 @SetCancelConn(i32* %15)
  %17 = load i32*, i32** %4, align 8
  %18 = load i8*, i8** %5, align 8
  %19 = call i32* @PQexec(i32* %17, i8* %18)
  store i32* %19, i32** %7, align 8
  %20 = call i32 (...) @ResetCancelConn()
  %21 = load i32*, i32** %7, align 8
  %22 = icmp ne i32* %21, null
  br i1 %22, label %23, label %28

23:                                               ; preds = %14
  %24 = load i32*, i32** %7, align 8
  %25 = call i64 @PQresultStatus(i32* %24)
  %26 = load i64, i64* @PGRES_COMMAND_OK, align 8
  %27 = icmp eq i64 %25, %26
  br label %28

28:                                               ; preds = %23, %14
  %29 = phi i1 [ false, %14 ], [ %27, %23 ]
  %30 = zext i1 %29 to i32
  store i32 %30, i32* %8, align 4
  %31 = load i32*, i32** %7, align 8
  %32 = icmp ne i32* %31, null
  br i1 %32, label %33, label %36

33:                                               ; preds = %28
  %34 = load i32*, i32** %7, align 8
  %35 = call i32 @PQclear(i32* %34)
  br label %36

36:                                               ; preds = %33, %28
  %37 = load i32, i32* %8, align 4
  ret i32 %37
}

declare dso_local i32 @printf(i8*, i8*) #1

declare dso_local i32 @SetCancelConn(i32*) #1

declare dso_local i32* @PQexec(i32*, i8*) #1

declare dso_local i32 @ResetCancelConn(...) #1

declare dso_local i64 @PQresultStatus(i32*) #1

declare dso_local i32 @PQclear(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
